# ROS-node-YOLO-v3-tiny

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: object_detection.yaml
launch/: object_detection.launch  sdroller_track_detect.launch
msg/: bbox.msg  bbox_array.msg
scripts/: object_detection.py  object_detection_main.py
scripts/classifier/: test.py  yolo.py
